<resources>
    <string name="app_name">Calculator</string>
    <string name="AC">AC</string>
    <string name="times">X</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divided">÷</string>
    <string name="insert2">Enter The Second Number</string>
    <string name="value">value</string>
    <string name="calculator">calculator</string>
    <string name="insert1">Enter The First Number</string>
    <string name="power2">X^2</string>
    <string name="negative">( _ )</string>
</resources>