<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/nn"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/minus"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="71dp"
        android:background="#C57D1D"
        android:text="@string/minus"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/times" />

    <Button
        android:id="@+id/plus"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="21dp"
        android:background="#C57D1D"
        android:text="@string/plus"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divided" />

    <Button
        android:id="@+id/times"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="71dp"
        android:background="#C57D1D"
        android:text="@string/times"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert2" />

    <Button
        android:id="@+id/divided"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="75dp"
        android:background="#C57D1D"
        android:text="@string/divided"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert2" />

    <Button
        android:id="@+id/AC"
        android:layout_width="276dp"
        android:layout_height="73dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="77dp"
        android:background="#C57D1D"
        android:text="@string/AC"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/power2" />

    <EditText
        android:id="@+id/insert1"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:autofillHints="no"
        android:background="#A6A4A4"
        android:ems="10"
        android:hint="@string/insert1"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value" />

    <EditText
        android:id="@+id/insert2"
        android:layout_width="match_parent"
        android:layout_height="53dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:autofillHints="no"
        android:background="#A6A4A4"
        android:ems="10"
        android:hint="@string/insert2"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert1" />

    <TextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="17dp"
        android:background="#A6A4A4"
        android:hint="@string/value"
        android:shadowColor="#090808"
        android:padding="2dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:drawableTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/power2"
        android:layout_width="276dp"
        android:layout_height="65dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="71dp"
        android:background="#C57D1D"
        android:text="@string/power2"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

</androidx.constraintlayout.widget.ConstraintLayout>